# lisp

./: CMakeLists.txt  LICENSE  README.md  lisp.txt
lispcode/: adv.lsp  edit.lsp  edit.lsp.old  guess.lsp  parse.lsp  sum.lsp
src/: lisp.c  lisp.h
